sys/prebuilt-bindings/geos_3.9.rs

extern "C" {
    pub fn GEOSSTRtree_iterate(
        tree: *mut GEOSSTRtree,
        callback: GEOSQueryCallback,
        userdata: *mut libc::c_void,
    );
}
extern "C" {
    pub fn GEOSSTRtree_remove(
        tree: *mut GEOSSTRtree,
        g: *const GEOSGeometry,
        item: *mut libc::c_void,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSSTRtree_destroy(tree: *mut GEOSSTRtree);
}
extern "C" {
    #[doc = "  Unary predicate - return 2 on exception, 1 on true, 0 on false"]
    #[doc = ""]
    pub fn GEOSisEmpty(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisSimple(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisRing(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSHasZ(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisClosed(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    #[doc = "  Dimensionally Extended 9 Intersection Model related"]
    #[doc = ""]
    pub fn GEOSRelatePattern(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        pat: *const libc::c_char,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSRelate(g1: *const GEOSGeometry, g2: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSRelatePatternMatch(
        mat: *const libc::c_char,
        pat: *const libc::c_char,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSRelateBoundaryNodeRule(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        bnr: libc::c_int,
    ) -> *mut libc::c_char;
}
extern "C" {
    #[doc = "  Validity checking"]
    #[doc = ""]
    pub fn GEOSisValid(g: *const GEOSGeometry) -> libc::c_char;
}
extern "C" {
    pub fn GEOSisValidReason(g: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSisValidDetail(
        g: *const GEOSGeometry,
        flags: libc::c_int,
        reason: *mut *mut libc::c_char,
        location: *mut *mut GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSMakeValid(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = "  Geometry info"]
    #[doc = ""]
    pub fn GEOSGeomType(g: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSGeomTypeId(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetSRID(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSSetSRID(g: *mut GEOSGeometry, SRID: libc::c_int);
}
extern "C" {
    pub fn GEOSGeom_getUserData(g: *const GEOSGeometry) -> *mut libc::c_void;
}
extern "C" {
    pub fn GEOSGeom_setUserData(g: *mut GEOSGeometry, userData: *mut libc::c_void);
}
extern "C" {
    pub fn GEOSGetNumGeometries(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetGeometryN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSNormalize(g: *mut GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_setPrecision(
        g: *const GEOSGeometry,
        gridSize: f64,
        flags: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_getPrecision(g: *const GEOSGeometry) -> f64;
}
extern "C" {
    pub fn GEOSGetNumInteriorRings(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetNumPoints(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetX(g: *const GEOSGeometry, x: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetY(g: *const GEOSGeometry, y: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetZ(g: *const GEOSGeometry, z: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetInteriorRingN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetExteriorRing(g: *const GEOSGeometry) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetNumCoordinates(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getCoordSeq(g: *const GEOSGeometry) -> *const GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSGeom_getDimensions(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getCoordinateDimension(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMin(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMin(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getXMax(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getYMax(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetPointN(g: *const GEOSGeometry, n: libc::c_int) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetStartPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeomGetEndPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = "  Misc functions"]
    #[doc = ""]
    pub fn GEOSArea(g: *const GEOSGeometry, area: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSLength(g: *const GEOSGeometry, length: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDistanceIndexed(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSHausdorffDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistance(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSFrechetDistanceDensify(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        densifyFrac: f64,
        dist: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetLength(g: *const GEOSGeometry, length: *mut f64) -> libc::c_int;
}
extern "C" {
    pub fn GEOSNearestPoints(
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    #[doc = " Algorithms"]
    #[doc = ""]
    pub fn GEOSOrientationIndex(
        Ax: f64,
        Ay: f64,
        Bx: f64,
        By: f64,
        Px: f64,
        Py: f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Reader and Writer APIs"]
    #[doc = ""]
    pub fn GEOSWKTReader_create() -> *mut GEOSWKTReader;
}
extern "C" {
    pub fn GEOSWKTReader_destroy(reader: *mut GEOSWKTReader);
}
extern "C" {
    pub fn GEOSWKTReader_read(
        reader: *mut GEOSWKTReader,
        wkt: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKTWriter_create() -> *mut GEOSWKTWriter;
}
extern "C" {
    pub fn GEOSWKTWriter_destroy(writer: *mut GEOSWKTWriter);
}
extern "C" {
    pub fn GEOSWKTWriter_write(
        writer: *mut GEOSWKTWriter,
        g: *const GEOSGeometry,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSWKTWriter_setTrim(writer: *mut GEOSWKTWriter, trim: libc::c_char);
}
extern "C" {
    pub fn GEOSWKTWriter_setRoundingPrecision(writer: *mut GEOSWKTWriter, precision: libc::c_int);
}
extern "C" {
    pub fn GEOSWKTWriter_setOutputDimension(writer: *mut GEOSWKTWriter, dim: libc::c_int);
}
extern "C" {
    pub fn GEOSWKTWriter_getOutputDimension(writer: *mut GEOSWKTWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKTWriter_setOld3D(writer: *mut GEOSWKTWriter, useOld3D: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBReader_create() -> *mut GEOSWKBReader;
}
extern "C" {
    pub fn GEOSWKBReader_destroy(reader: *mut GEOSWKBReader);
}
extern "C" {
    pub fn GEOSWKBReader_read(
        reader: *mut GEOSWKBReader,
        wkb: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBReader_readHEX(
        reader: *mut GEOSWKBReader,
        hex: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBWriter_create() -> *mut GEOSWKBWriter;
}
extern "C" {
    pub fn GEOSWKBWriter_destroy(writer: *mut GEOSWKBWriter);
}
extern "C" {
    pub fn GEOSWKBWriter_write(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_writeHEX(
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_getOutputDimension(writer: *const GEOSWKBWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setOutputDimension(writer: *mut GEOSWKBWriter, newDimension: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBWriter_getByteOrder(writer: *const GEOSWKBWriter) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setByteOrder(writer: *mut GEOSWKBWriter, byteOrder: libc::c_int);
}
extern "C" {
    pub fn GEOSWKBWriter_getIncludeSRID(writer: *const GEOSWKBWriter) -> libc::c_char;
}
extern "C" {
    pub fn GEOSWKBWriter_setIncludeSRID(writer: *mut GEOSWKBWriter, writeSRID: libc::c_char);
}
extern "C" {
    pub fn GEOSFree(buffer: *mut libc::c_void);
}
